--- a/dashboard-prod/deployment.yaml
+++ b/dashboard-prod/deployment.yaml
@@ -1,4 +1,3 @@
-# FANS LANDING #
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -10,7 +9,7 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      app: dashboard-dprod
+      app: dashboard-prod
   template:
     metadata:
       labels:
