--- a/dashboard-prod/ingress.yaml
+++ b/dashboard-prod/ingress.yaml
@@ -2,16 +2,16 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: rhino-admin
-  namespace: rhino-admin
+  namespace: rhino-admin-prod
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
     spec.ingressClassName: "gce"
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
 spec:
-  # tls:
-  #   - hosts: 
-  #     - rhino-admin.com
-  #     secretName: ssl-dashboard-prod-secret
+  tls:
+    - hosts: 
+      - rhino-admin.com
+      secretName: ssl-dashboard-prod-secret
   rules:
   - host: rhino-admin.com
     http:
