--- a/dashboard-prod/service.yaml
+++ b/dashboard-prod/service.yaml
@@ -2,7 +2,7 @@ apiVersion: "v1"
 kind: "Service"
 metadata:
   name: "dashboard-prod-service"
-  namespace: rhino-admin
+  namespace: rhino-admin-prod
   labels:
     app: dashboard-prod
 spec:
