--- a/dashboard-prod/dashboard-prod.yaml
+++ b/dashboard-prod/dashboard-prod.yaml
@@ -27,7 +27,7 @@ metadata:
   name: dashboard-prod-deployment
   namespace: rhino-admin-prod
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: dashboard-prod
@@ -37,7 +37,7 @@ spec:
         app: dashboard-prod
     spec:
       containers:
-      - image: southamerica-east1-docker.pkg.dev/diesel-talon-387022/dashboard-prod/dashboard-prod:0.0.1
+      - image: southamerica-east1-docker.pkg.dev/diesel-talon-387022/dashboard-prod/dashboard-prod:01cfed9ccb4b5b35d9162fdf91ea111abed9925e
         imagePullPolicy: Always
         name: dashboard-prod
         ports:
@@ -71,3 +71,7 @@ spec:
               number: 80
         path: /
         pathType: Prefix
+  tls:
+  - hosts:
+    - rhino-admin.com
+    secretName: ssl-dashboard-prod-secret
