--- a/dashboard-prod/deployment.yaml
+++ b/dashboard-prod/deployment.yaml
@@ -7,7 +7,7 @@ metadata:
   labels:
     app: dashboard-prod
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: dashboard-prod
@@ -17,15 +17,15 @@ spec:
         app: dashboard-prod
     spec:
       containers:
-        - name: dashboard-prod
-          image: southamerica-east1-docker.pkg.dev/diesel-talon-387022/dashboard-prod/dashboard-prod:0.0.1
-          imagePullPolicy: Always
-          resources:
-            requests:
-              memory: "128Mi"
-              cpu: "250m"
-            limits:
-              memory: "1048Mi"
-              cpu: "1000m"
-          ports:
-            - containerPort: 80
+      - name: dashboard-prod
+        image: southamerica-east1-docker.pkg.dev/diesel-talon-387022/dashboard-prod/dashboard-prod:01cfed9ccb4b5b35d9162fdf91ea111abed9925e
+        imagePullPolicy: Always
+        resources:
+          requests:
+            memory: "128Mi"
+            cpu: "250m"
+          limits:
+            memory: "1048Mi"
+            cpu: "1000m"
+        ports:
+        - containerPort: 80
